[tool.poetry]
name = "pytest-helm-charts"
version = "1.2.0"
description = "A plugin to provide different types and configs of Kubernetes clusters that can be used for testing."
authors = ["Łukasz Piątkowski <lukasz@giantswarm.io>"]
license = "Apache-2.0"
repository = "https://github.com/giantswarm/pytest-helm-charts"
readme = "README.md"
keywords = ["kubernetes", "helm", "chart"]
include = ["CHANGELOG.md", "DCO"]
packages = [{ include = "pytest_helm_charts/**/*.py" }]
classifiers = [
  'Development Status :: 4 - Beta',
  'Framework :: Pytest',
  'Intended Audience :: Developers',
  'Topic :: Software Development :: Testing',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: Implementation :: CPython',
  'Operating System :: POSIX :: Linux',
  'License :: OSI Approved :: Apache Software License',
]

[tool.poetry.plugins] # Optional super table

[tool.poetry.plugins."pytest11"]
"helm-charts" = "pytest_helm_charts.plugin"

[tool.poetry.dependencies]
python = "^3.8.1"
pytest = "^8.0.0"
pykube-ng = ">=23.6,<24"
mkdocs = { version = "^1.2.3", optional = true }
mkapi = { version = "^1.0.14", optional = true }
Deprecated = "^1.2.13"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.0"
tox = "<5"
tox-pyenv = "^1.1.0"
pytest-mock = "^3.6.1"
flake8 = "^7.0.0"
mypy = "^1.0"
pytest-cov = "^4.0.0"
bandit = "^1.7.4"
black = "^24.0.0"
pre-commit = "^3.0.0"

[tool.poetry.extras]
docs = ["mkdocs", "mkapi"]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
