[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-helm-charts"
version = "1.3.4"
description = "A plugin to provide different types and configs of Kubernetes clusters that can be used for testing."
authors = [{ name = "Łukasz Piątkowski", email = "lukasz@giantswarm.io" }]
requires-python = ">=3.10, <4"
readme = "README.md"
license = "Apache-2.0"
keywords = ["kubernetes", "helm", "chart"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "pytest>=8.0.0,<9",
    "pykube-ng>=23.6,<24",
    "Deprecated>=1.2.13,<2",
]

[project.optional-dependencies]
docs = ["mkdocs>=1.2.3,<2", "mkapi>=1.0.14,<2"]

[project.urls]
Repository = "https://github.com/giantswarm/pytest-helm-charts"

[project.entry-points."pytest11"]
"helm-charts" = "pytest_helm_charts.plugin"

[dependency-groups]
dev = [
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "tox>=4.0.0,<5",
]

[tool.hatch.build.targets.sdist]
include = ["pytest_helm_charts/**/*.py", "CHANGELOG.md", "DCO"]

[tool.hatch.build.targets.wheel]
include = ["pytest_helm_charts/**/*.py", "CHANGELOG.md", "DCO"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
# Same as Black.
line-length = 120
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.tox]
requires = ["tox-uv>=1.0"]
env_list = ["py310", "py311", "py312", "py313", "py314"]

[tool.tox.env_run_base]
deps = ["pytest"]
commands = [["pytest", "tests/", "--import-mode", "importlib"]]
runner = "uv-venv-lock-runner"
